# rusty-typescript

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.ts  package-lock.json  package.json
TypeScript-replace/src/compiler/: scanner.ts  tsconfig.json  utilities.ts
TypeScript-replace/tests/baselines/reference/api/: tsserverlibrary.d.ts  typescript.d.ts
src/: lib.rs  types.rs
src/compiler/: mod.rs  scanner.rs  utilities.rs
src/types/: mod.rs  pseudobigint.rs  textspan.rs
