[package]
name = "rusty-typescript"
version = "0.1.0"
authors = ["Ya'ar Hever <yaarhever@gmail.com>"]
edition = "2018"
description = "A TypeScript compiler written in Rust"
license = "LICENSE"
repository = "https://github.com/yever/rusty-typescript"

[dependencies]
wasm-bindgen = "0.2"
num-traits = "0.2"
num-derive = "0.2"
num-bigint = "0.2"
js-sys = "0.3"
# Used for error handling
snafu = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

# Don't run proptest in webassembly
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "0.9"

[lib]
crate-type = ["cdylib"]
